// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component-store should import into a specified module when the module provided 1`] = `
"import { NgModule, provideBrowserGlobalErrorListeners } from '@angular/core';
import { BrowserModule } from '@angular/platform-browser';

import { App } from './app';
import { FooStore } from './foo/foo.store';

@NgModule({
  declarations: [
    App
  ],
  imports: [
    BrowserModule
  ],
  providers: [
    provideBrowserGlobalErrorListeners(),
    FooStore
  ],
  bootstrap: [App]
})
export class AppModule { }
"
`;

exports[`component-store should inject the component store correctly into the spec 1`] = `
"import { FooStore } from './foo.store';

describe('FooStore', () => {
  const componentStore = new FooStore();

  it('should be created', () => {
    expect(componentStore).toBeTruthy();
  });
});
"
`;

exports[`component-store should not be provided into the module by default 1`] = `
"import { NgModule, provideBrowserGlobalErrorListeners } from '@angular/core';
import { BrowserModule } from '@angular/platform-browser';

import { App } from './app';

@NgModule({
  declarations: [
    App
  ],
  imports: [
    BrowserModule
  ],
  providers: [
    provideBrowserGlobalErrorListeners()
  ],
  bootstrap: [App]
})
export class AppModule { }
"
`;

exports[`component-store should register the component store in the provided component 1`] = `
"import { Component, signal } from '@angular/core';
import { FooStore } from './foo/foo.store';

@Component({
  selector: 'app-root',
  templateUrl: './app.html',
  standalone: false,
  styleUrl: './app.css',
  providers: [FooStore]
})
export class App {
    protected readonly title = signal('bar');
}
"
`;
